--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^10.12.16",
     "global": "^4.4.0",
     "moment": "^2.29.4",
+    "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
