--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.12.16",
     "global": "^4.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "popmotion": "^11.0.5",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.0-rc.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
