--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
-    "recoil": "^0.7.7",
+    "recoil": "^0.7.2",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^6.0.0-rc.1",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
