--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
+    "firebase": "^9.23.0",
     "framer-motion": "^10.12.16",
     "global": "^4.4.0",
     "lodash": "^4.17.21",
