--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,12 +18,15 @@
     "popmotion": "^11.0.5",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "recoil": "^0.7.2",
     "recoil-persist": "^4.2.0",
+    "sanitize-html": "^2.11.0",
     "styled-components": "^6.0.0-rc.1",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
