--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-color": "^2.19.3",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
